--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/facebook_clone.css" />
     <link rel="stylesheet" href="css/mediaquery.css" />
-    <link rel="stylesheet" href="css/footer.css" />    
+    <link rel="stylesheet" href="css/footer.css" />
     <title>Facebook Clone</title>
   </head>
   <body>
@@ -40,7 +40,7 @@
                     id="input-password"
                   />
                   <input type="submit" value="Log in" id="btn-login" />
-                  <a href="#">Forgot passowrd? </a>
+                  <a href="#">Forgot passowrd?? </a>
                   <div class="line"><h1></h1></div>
                 </form>
                 <div class="btn-create-account">
@@ -49,7 +49,13 @@
               </div>
             </article>
             <div class="create-page">
-              <p><a href="#" style="text-decoration: none; color: black; font-weight: 700">Create a Page</a> for a celebrity, brand or business.    
+              <p>
+                <a
+                  href="#"
+                  style="text-decoration: none; color: black; font-weight: 700"
+                  >Create a Page</a
+                >
+                for a celebrity, brand or business.
               </p>
             </div>
           </div>
@@ -57,7 +63,7 @@
       </div>
     </main>
     <footer>
-        <div class="footer-container">
+      <div class="footer-container">
         <div class="footer-language">
           <ul>
             <li>English (US)</li>
@@ -77,44 +83,42 @@
         <div id="footer-line"><h1></h1></div>
         <div class="footer-choices">
           <ul>
-              <li>Signup</li>
-              <li>Login</li>
-              <li>Messenger</li>
-              <li>Facebook Lite</li>
-              <li>Video</li>
-              <li>Place</li>
-              <li>Games</li>
-              <li>Marketplace</li>
-              <li>Meta Pay</li>
-              <li>Meta Store</li>
-              <li>Meta Quest</li>
-              <li>Ray-Ban Meta</li>
-              <li>Meta AI</li>
-              <li>Instagram</li>
-              <li>Threads</li>
-              <li>Fundraisers</li>
-              <li>Services</li>
-              <li>Voting Information Center</li>
-              <li>Privacy Policy</li>
-              <li>Cookie Settings</li>
-              <li>Groups</li>
-              <li>Groups</li>
-              <li>About</li>
-              <li>Create ad</li>
-              <li>Create Page</li>
-              <li>Developers</li>
-              <li>Careers</li>
-              <li>Add choices</li>
-              <li>Terms</li>
-              <li>Help</li>
-              <li>Help</li>
-              <li >Contact Uploading & Non-UsersSettingsActivity log</li>
+            <li>Signup</li>
+            <li>Login</li>
+            <li>Messenger</li>
+            <li>Facebook Lite</li>
+            <li>Video</li>
+            <li>Place</li>
+            <li>Games</li>
+            <li>Marketplace</li>
+            <li>Meta Pay</li>
+            <li>Meta Store</li>
+            <li>Meta Quest</li>
+            <li>Ray-Ban Meta</li>
+            <li>Meta AI</li>
+            <li>Instagram</li>
+            <li>Threads</li>
+            <li>Fundraisers</li>
+            <li>Services</li>
+            <li>Voting Information Center</li>
+            <li>Privacy Policy</li>
+            <li>Cookie Settings</li>
+            <li>Groups</li>
+            <li>Groups</li>
+            <li>About</li>
+            <li>Create ad</li>
+            <li>Create Page</li>
+            <li>Developers</li>
+            <li>Careers</li>
+            <li>Add choices</li>
+            <li>Terms</li>
+            <li>Help</li>
+            <li>Help</li>
+            <li>Contact Uploading & Non-UsersSettingsActivity log</li>
           </ul>
           <p id="copyright">Meta © 2024</p>
         </div>
-    </div>
-
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
-
